# TerraMiner

./: .gitignore  .replit  ONBOARDING_DEDUP.md  README.md  apartment_data.json  api_endpoint_test.py  app.py  app_monitor.py  config.json  core.py  create_admin_key.py  db.py  db_utils.py  dedup_dashboard.py  fix_jobrun_table.py  fix_scheduled_report_table.py  import_api_logs.py  import_data.py  initialize_data_sources.py  main.py  models.py  package.json  pacs_api_server.py  pnpm-lock.yaml  process_locations.py  process_locations2.py  property_search.py  pyproject.toml  response_apartment_details.json  run_migrations.py  run_pacs_server.py  seed_data_sources.py  setup_pacmls_credentials.py  start_pacs_server.sh  start_zillow.sh  tailwind.config.ts  test_apartment_api.py  test_benton_gis_connector.py  test_pacmls_connector.py  test_pacs_connection.py  (+7 more)
ai/: __init__.py  agent_protocol.py  agent_tools.py  analyzer.py  continuous_learning_system.py  model_content_protocol.py  openai_integration.py  prompt_optimizer.py  property_recommender.py  southeastern_wa_insights.py  suggestions.py  voice_analyzer.py  voice_processor.py
api/: agent_tools_api.py  ai_suggestions.py  auth.py  cma_routes.py  county_api.py  etl_routes.py  pacmls_api.py  property_recommendations.py  real_estate_api.py  schedule_routes.py  voice_routes.py  voice_search.py  zillow_routes.py
app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
attached_assets/: DevOps roles.md  PACS.env.txt  (+16 more)
rust-engine/: Cargo.toml
rust-engine/src/: intent.rs  lib.rs  market.rs  scoring.rs
(+354 files in other folders)
