[package]
name = "terraminer-engine"
version = "0.1.0"
edition = "2021"
description = "TerraFusion property scoring, intent parsing, and market analysis engine compiled to WebAssembly"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"

[profile.release]
lto = true
opt-level = "s"
